hphp/test/slow/eval_order/1499.php.expectf
string(3) "123"

Fatal error: Call to undefined function foo_1499() in %s/test/slow/eval_order/1499.php on line 10
string(7) "errored"
